k8s/prod-environment/deploy-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gz-web
  namespace: prod
  labels:
    app: gz-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gz-web
  template:
    metadata:
      labels:
        app: gz-web
    spec:
      containers:
      - name: django-backend
        image: geekzone/backend:0.1.${CIRCLE_PREVIOUS_BUILD_NUM}
        resources:
          limits:
            memory: "100Mi"
            cpu: 50m
          requests:
            memory: "50Mi"
            cpu: 30m
      - name: frontend-proxy
        image: geekzone/frontend:0.1.${CIRCLE_PREVIOUS_BUILD_NUM}
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          limits:
            memory: "50Mi"
            cpu: 50m
          requests:
            memory: "30Mi"
            cpu: 30m

---
apiVersion: v1
kind: Service
metadata:
  name: gz-web-service
  namespace: prod
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test.geek.zone
#    external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  type: ClusterIP
  selector:
    app: gz-web
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gz-web
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/app-root: /memberships/register 
spec:
  tls:
  - hosts:
    - "test.geek.zone"
  rules: 
  - host: test.geek.zone
    http:
      paths:
      - path: /
        pathType: Prefix          
        backend:
          service:
            name: gz-web-service  
            port: 
              number: 80
  ingressClassName: nginx
